coded all the files completely

--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
                 <li class="synonyms">
                     <div class="details">
                         <p>Synonyms</p>
-                        <div class="list">
-                            <span>glad,</span>
-                            <span>contented,</span>
-                            <span>delighted,</span>
-                            <span>cheerful,</span>
-                            <span>joyful</span>
-                        </div>
+                        <div class="list"></div>
                     </div>
                 </li>
             </div>
